coral-component-clock/src/styles/index.styl
/**
 * Copyright 2019 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

._coral-Clock {
  display: inline-table;
  vertical-align: top;
  width: 200px;

  &._coral-Clock--extended {
    width: 250px;

    // @spectrum
    ._coral-Dropdown-label {
      min-width: 0;
    }
  }
}

._coral-Clock-minute,
._coral-Clock-hour {
  display: table-cell;
  width: 100%;
  min-width: 0;
}

._coral-Clock-divider {
  display: table-cell;
  text-align: center;
  width: 16px;
  vertical-align: middle;
}

._coral-Clock ._coral-Clock-period {
  display: table-cell;
  min-width: 73px;
  width: 73px;
  vertical-align: top;
  padding-left: 16px;
}

